# euler-lib

./: .gitignore  .merlin  .ocamlinit  Arith.ml  Arith.mli  CHANGES.md  Common.ml  Common.mli  Diophantine.ml  Euler.ml  Euler.mli  Farey.ml  Farey.mli  Makefile  ModArith.ml  ModArith.mli  Modular.ml  PE.ml  PE.mli  Primality.ml  Primality.mli  Primality__data_preculling.ml  Primes.ml  README.md  TODO.txt  ZCommon.ml  ZCommon.mli  _oasis  dune  dune-project  euler.opam  gen-preculling.ml  pe.opam  setup.ml
.github/workflows/: ci.yml
TODO/: Pell.ml  pythagorean-triples.txt
bench/: bench-add-sub-mul-div.ml  bench-gcd.ml  bench-is_prime.ml  bench-iter_primes.ml  bench-micro-opt.ml  bench-sieves.ml  bench.ml.TEMPLATE  dune
config/: dune  find-magic.ml  find-max-exp-coeff.ml  gen-preculling.ml  gen-wheel.ml  magic32.txt  magic64_summary_partial.txt
index.html/: index.html
index.html/euler/: index.html
index.html/euler/Euler/: index.html
index.html/euler/Euler/Arith/: index.html
index.html/euler/Euler/Arith/Unsafe/: index.html
index.html/euler/Euler/Diophantine/: index.html
index.html/euler/Euler/Farey/: index.html
index.html/euler/Euler/Modular/: index.html
index.html/euler/Euler/Modular/Make/: index.html
index.html/euler/Euler/Modular/Make/argument-1-_/: index.html
index.html/euler/Euler/Primes/: index.html
src/: Arith.ml  Diophantine.ml  Euler.mli  Farey.ml  Farey.mli  Modular.ml  Primes.ml  dune
