(library
	(public_name pe)
	(name        PE)
	(wrapped     true)
	(synopsis    "An OCaml library for Project Euler problems. This is mostly an arithmetic library.")
	(libraries   seq containers zarith)
	(modules     (:standard \ gen-preculling))
	(flags       (:standard
		-w +a@8@14@29@28-6-32-60
		-short-paths -principal -strict-sequence -safe-string
		-unboxed-types
		;-noassert
	))
	(ocamlopt_flags (:standard -inline=5 -ccopt -Ofast))
)

(rule
	(targets    Primality__data_preculling.ml)
	(deps       gen-preculling.exe)
	(action     (run %{deps} %{targets}))
)

(executable
	(name       gen-preculling)
	(modules    gen-preculling)
	(flags      -w -24)
)
