(library
	(public_name euler)
	(name        Euler)
	(wrapped     true)
	(synopsis    "An OCaml library for Project Euler problems. This is mostly an arithmetic library.")
	(libraries   seq containers)
	(modules     (:standard \ gen-preculling)) ; also exclude "bench" if needed
	(flags       (:standard
		-w +a@8@14@29@28-6-32-60
		-short-paths -principal -strict-sequence -safe-string
		-unboxed-types
		;-noassert
	))
	(ocamlopt_flags (:standard -inline=5 -ccopt -Ofast))
)

(rule
	(targets    Primes__data_preculling.ml)
	(deps       gen-preculling.exe)
	(action     (run %{deps} %{targets}))
)

(executable
	(name       gen-preculling)
	(modules    gen-preculling)
	(flags      -w -24)
)

;(executable
;	(name       bench)
;	(modules    bench)
;	(libraries  euler)
;	(flags      -w -26-38)
;)
