opam-version: "1.2"

name:        "euler"
version:     "0.0"
license:     "WTFPL"
author:      "Glen Mével <glen.mevel@crans.org>"
maintainer:  "Glen Mével <glen.mevel@crans.org>"
tags:        [ "arithmetic" "overflow" "primes" ]
doc:         "https://perso.crans.org/mevel/odoc/euler/index.html"
homepage:    "https://github.com/gmevel/euler-lib"
dev-repo:    "https://github.com/gmevel/euler-lib.git"
bug-reports: "https://github.com/gmevel/euler-lib/issues"

available: [ ocaml-version >= "4.02.0" ]
depends: [
	"ocamlfind" { build }
	"dune" { build }
	"odoc" { doc }
	"seq"
	"containers"
]

build:      [ make "lib" "DUNE_BUILD_OPTIONS='-p %{name}% -j %{jobs}%'" ]
build-doc:  [ make "doc" ]
install:    [ make "install" ]
remove:     [ "ocamlfind" "remove" name ]
